refactor: Stream#toList() → Collectors.toList()로 수정. 자바 8에서도 호환 가능